# OpenMyGO

./: .gitignore  grpo_trainer.py  pyproject.toml  readme.md
config/: fsdp2.yaml  qwen2.5-3b.py  qwen3-1.7b.py  utils.py
data_service/: data_client.py  data_server.py  data_utils.py  metric_utils.py  step_state.py
data_service/operations/: advantage.py  base.py  grpo.py  reduce.py  reward.py  rollout.py
data_service/typing/: grouping.py  grpo_data.py  message.py
implement/dataset/: dataset_utils.py  deepscaler.py  gsm8k.py  huggingfaceh4.py  math.py  matharena.py
implement/model/: model_utils.py  qwen.py  qwen_vl.py
implement/reward/: conditional_length_penalty.py  latex_math.py  latex_math_async.py  length_penalty.py
test/: data_service_test.py  eval.py  perf.py  repetition_incremental.py  tf_service_test.py  vllm_service_test.py
test/implement/dataset/: common.py
test/implement/model/: common.py  qwen_3.py
test/operations/: test_advantage.py  test_reward.py  test_rollout.py
test/rewards/: multiple_choice_test.py
test/test_data/: convs.py
tf_service/: tf_client.py  tf_server.py
utils/: decorators.py  metrics.py
vllm_service/: nccl_client.py  vllm_client.py  vllm_server_ray.py
vllm_service/detector/: repetition_incremental.py
vllm_service/router/: load_aware.py  round_robin.py
